# onebrc-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
data/: test01.csv  test02.csv  test03.csv
src/: arraystring128.rs  lib.rs  main.rs  station_measurements.rs
