[package]
name = "onebrc-rs"
description = "1 Billion Row Challenge-- in Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "calculate_average"
path = "src/main.rs"

[profile.release]
debug = true

[dependencies]
arrayvec = "0.7.4"
